# Car-Parts-E-commerce

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pit-stop_api.yaml
BACKEND/app/: .env  Dockerfile  docker-compose.yml
PitstopPerformaceSwaggerHub/: swagger.json
app/: .env  crud.py  database.db  docker-compose.yml  orders.py  pyproject.toml
app/app/core/: logging_config.py
app/app/routes/: cart.py
app/app/services/: cart.py  product.py  support.py
app/core/: config.py
app/models/: order.py  support.py
app/routes/: __init__.py  admin.py  product.py
app/services/: checkout.py  product.py
app/src/app/: crud.py  database.db  main.py
app/src/app/core/: auth.py  config.py  database.py  logging_config.py
app/src/app/models/: address.py  cart.py  order.py  product  product.py  support.py  user.py
app/src/app/routes/: __init__.py  admin.py  cart.py  checkout.py  database.db  orders.py  product.py  search.py  support.py  user.py
app/src/app/schemas/: cart.py  product  product.py  support.py
app/src/app/services/: cart.py  checkout.py  product.py  support.py  user.py
app/tests/routes/: test_user.py
backend/: README.md  pyproject.toml
backend/src/app/: main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: addToCart.tsx
frontend/src/context/: cartcontext.tsx
frontend/src/hooks/: useregisterform.tsx
pitstop-performace/: package-lock.json  package.json  tailwind.config.ts
pitstop-performace/src/app/: globals.css  layout.tsx  page.tsx
pitstop-performace/src/components/: addToCart.tsx  checkoutform.tsx  createticketform.tsx  loginform.tsx  navbar.tsx  navbaritem.tsx  productitem.tsx  productselector.tsx  registerform.tsx  searchbutton.tsx  selectbutton.tsx  selectresult.tsx
pitstop-performace/src/context/: cartcontext.tsx
src/: .env  database.db
src/app/: crud.py
src/app/models/: product.py
src/app/routes/: admin.py  product.py
(+79 files in other folders)
